# iv

./: .ENV.EXAMPLE  .gitignore  README.md  index.html  package.json  vite.config.ts
public/: site.webmanifest
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_feedback.rs  clipboard.rs  cloud_transcribe.rs  input.rs  lib.rs  local_transcribe.rs  main.rs  overlay.rs  recording_manager.rs  settings.rs  shortcut.rs  tray.rs
src-tauri/src/models/: manager.rs  mod.rs  types.rs
src-tauri/src/vad/: download.rs  mod.rs  silero.rs  smoothed.rs
src/components/orb/: Orb.tsx  index.ts  orb.css
src/components/settings/: SettingsPanel.tsx
src/hooks/: useAudioLevel.ts  useModels.ts  useTalkingSimulation.ts  useVad.ts
src/overlay/: Waveform.tsx  index.html  main.tsx  overlay.css
