[package]
name = "iv"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features= ["json", "multipart", "stream"] }
log = "0.4"
anyhow = "1.0"
async-openai = "0.27"
dotenvy = "0.15"
tauri-plugin-log = "2"
transcribe-rs = { version = "0.2", features = ["parakeet"] }
futures-util = "0.3"
tar = "0.4"
flate2 = "1.0"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

